# BeijingTiKu

./: .gitignore  BeijingTiKu.py  description.txt  main.py  pyproject.toml
docs/: issues.md  login.txt
libs/: __init__.py  cache.py  cached.py  config.py  consts.py  except_hook.py  log.py  pages.py  pages_logical.py  widgets.py  worker.py
libs/pages/: __init__.py  main_window.py
libs/pages/account_page/: logic.py  ui.py
libs/pages/dialog/: __init__.py  download.py  login.py
libs/pages/loading_window/: __init__.py
libs/pages/local_page/: logic.py  ui.py
libs/pages/local_page/sub_page/: collects.py  download.py  history.py
libs/pages/login_window/: __init__.py
libs/pages/preferred_page/: logic.py  ui.py
libs/pages/progress_window/: __init__.py
libs/pages/search_page/: logic.py  ui.py
libs/pages/search_page/sub_page/: __init__.py
libs/pages/search_page/sub_page/paper_info/: ui.py
libs/pages/search_page/sub_page/search/: logic.py  ui.py
libs/pages/settings_page/: logic.py  ui.py
libs/typed/: __init__.py  papers.py
libs/widgets/: card_base.py  download_button.py  loading_widget.py  material_icon.py  pdf_view.py  result_card.py  setting_card.py
libs/worker/: download.py  login.py  preferred.py  request.py  request_worker.py  search.py
